@@ -201,7 +201,7 @@ void generate_replog(FILE *htmlrep, FILE *textrep, char *textrepurl,
 			fprintf(htmlrep, "<TD ALIGN=RIGHT NOWRAP>%s</TD>\n", end);
 			fprintf(htmlrep, "<TD ALIGN=CENTER BGCOLOR=\"#000000\">");
 			fprintf(htmlrep, "<A HREF=\"%s\">", 
-				histlogurl(hostname, service, 0, walk->timespec));
+				histlogurl(hostname, service, (unsigned int)walk->starttime, NULL));
 			fprintf(htmlrep, "<IMG SRC=\"%s/%s\" ALT=\"%s\" TITLE=\"%s\" HEIGHT=%s WIDTH=%s BORDER=0>", 
 				xgetenv("XYMONSKIN"), dotgiffilename(walk->color, 0, !angrygif), colorname(walk->color), colorname(walk->color),
 				xgetenv("DOTHEIGHT"), xgetenv("DOTWIDTH"));
